syntax = "proto3";

package event_sourcing;

import "google/protobuf/timestamp.proto";

option go_package = "simplebank/pkg/hephaistos/core/event_sourcing";

message EventEnvelope {
  string id = 1;
  string aggregate_id = 2;
  int64 aggregate_version = 3;
  string type_name = 4;
  bytes payload = 5;
  google.protobuf.Timestamp occurred_at = 6;
  map<string, string> metadata = 7;
}
